--- a/reactiveui/on-dotnet/Bang/Bang/Bang.csproj
+++ b/reactiveui/on-dotnet/Bang/Bang/Bang.csproj
@@ -6,6 +6,10 @@
 
     <ItemGroup>
       <PackageReference Include="MatBlazor" Version="2.8.0" />
+      <PackageReference Include="ReactiveUI.Blazor" Version="13.3.2" />
+      <PackageReference Include="Refit" Version="5.1.67" />
+      <PackageReference Include="Rocket.Surgery.Airframe.Data" Version="0.8.0" />
+      <PackageReference Include="Splat.Microsoft.Extensions.DependencyInjection" Version="11.1.1" />
     </ItemGroup>
 
 </Project>
