--- a/reactiveui/on-dotnet/Bang/Bang/Bang.csproj
+++ b/reactiveui/on-dotnet/Bang/Bang/Bang.csproj
@@ -8,8 +8,12 @@
       <PackageReference Include="MatBlazor" Version="2.8.0" />
       <PackageReference Include="ReactiveUI.Blazor" Version="13.3.2" />
       <PackageReference Include="Refit" Version="5.1.67" />
-      <PackageReference Include="Rocket.Surgery.Airframe.Data" Version="0.8.0" />
+      <PackageReference Include="Refit.HttpClientFactory" Version="5.1.67" />
       <PackageReference Include="Splat.Microsoft.Extensions.DependencyInjection" Version="11.1.1" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\..\..\..\..\..\rsg\Airframe\src\Data\Data.csproj" />
     </ItemGroup>
 
 </Project>
